Fixed navbar spacing

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,3 +2,5 @@
 
 @import 'variables';
 @import 'bootstrap';
+
+body { padding-top: 70px; }
